Terminado el controlador patient.
