# backend/api/swagger/swagger.yaml
@@ -211,103 +211,97 @@ paths:
         200:
           description: "Success"
  
-  /people:
-    x-swagger-router-controller: peoplecontroller
-    post:
-      tags:
-        - People
-      operationId: peopleControllerPost
-      summary: "Create Person"
-      description: "Create a new Person"
-      parameters:
-        - name: person
-          in: body
-          required: true
-          schema:
-            $ref: '#/definitions/Person'
-      responses:
-        200:
-          description: "Success"
-        403:
-          description: "Access Denied"
-          schema:
-            $ref: '#/definitions/Error'
-    get:
-      tags:
-        - People
-      operationId: peopleControllerGet
-      summary: "Get People"
-      description: "Get all the People"
-      responses:
-        200:
-          description: "Success"
-          schema:
-            $ref: '#/definitions/Person'
-        403:
-          description: "Access Denied"
-          schema:
-            $ref: '#/definitions/Error'
+  # /people:
+  #   x-swagger-router-controller: peoplecontroller
+  #   post:
+  #     tags:
+  #       - People
+  #     operationId: peopleControllerPost
+  #     summary: "Create Person"
+  #     description: "Create a new Person"
+  #     parameters:
+  #       - name: person
+  #         in: body
+  #         required: true
+  #         schema:
+  #           $ref: '#/definitions/Person'
+  #     responses:
+  #       200:
+  #         description: "Success"
+  #       403:
+  #         description: "Access Denied"
+  #         schema:
+  #           $ref: '#/definitions/Error'
+  #   get:
+  #     tags:
+  #       - People
+  #     operationId: peopleControllerGet
+  #     summary: "Get People"
+  #     description: "Get all the People"
+  #     responses:
+  #       200:
+  #         description: "Success"
+  #         schema:
+  #           $ref: '#/definitions/Person'
+  #       403:
+  #         description: "Access Denied"
+  #         schema:
+  #           $ref: '#/definitions/Error'
 
-  /people/{idPerson}:
-    x-swagger-router-controller: people.controller
-    parameters:
-      - name: idPerson
-        in: path
-        description: "ID of the Person"
-        required: true
-        type: string
-    get:
-      tags:
-        - People
-      operationId: peopleControllerGetId
-      summary: "Get person"
-      description: "Get only one Person"
-      responses:
-        200:
-          description: "Success"
-          schema:
-            $ref: '#/definitions/Person'
-        403:
-          description: "Access Denied"
-          schema:
-            $ref: '#/definitions/Error'
+  # /people/{idPerson}:
+  #   x-swagger-router-controller: people.controller
+  #   parameters:
+  #     - name: idPerson
+  #       in: path
+  #       description: "ID of the Person"
+  #       required: true
+  #       type: string
+  #   get:
+  #     tags:
+  #       - People
+  #     operationId: peopleControllerGetId
+  #     summary: "Get person"
+  #     description: "Get only one Person"
+  #     responses:
+  #       200:
+  #         description: "Success"
+  #         schema:
+  #           $ref: '#/definitions/Person'
+  #       403:
+  #         description: "Access Denied"
+  #         schema:
+  #           $ref: '#/definitions/Error'
 
-    put:
-      tags:
-        - People
-      operationId: peopleControllerPutId
-      summary: "Update a person"
-      description: "Update only one person"
-      responses:
-        200:
-          description: "Success"
-        403:
-          description: "Access Denied"
-          schema:
-            $ref: '#/definitions/Error'
+  #   put:
+  #     tags:
+  #       - People
+  #     operationId: peopleControllerPutId
+  #     summary: "Update a person"
+  #     description: "Update only one person"
+  #     responses:
+  #       200:
+  #         description: "Success"
+  #       403:
+  #         description: "Access Denied"
+  #         schema:
+  #           $ref: '#/definitions/Error'
           
-    delete:
-      tags:
-        - People
-      operationId: peopleControllerDeleteId
-      summary: "Delete a person"
-      description: "Delete only one person"
-      responses:
-        200:
-          description: "Success"
-        403:
-          description: "Access Denied"
-          schema:
-            $ref: '#/definitions/Error'
+  #   delete:
+  #     tags:
+  #       - People
+  #     operationId: peopleControllerDeleteId
+  #     summary: "Delete a person"
+  #     description: "Delete only one person"
+  #     responses:
+  #       200:
+  #         description: "Success"
+  #       403:
+  #         description: "Access Denied"
+  #         schema:
+  #           $ref: '#/definitions/Error'
  
-  /people/{idPerson}/patients:
+  /patients:
     x-swagger-router-controller: patients.controller
-    parameters:
-      - name: idPerson
-        in: path
-        description: "ID of the Person"
-        required: true
-        type: string
     post:
       tags:
         - Patients
@@ -343,17 +337,12 @@ paths:
           schema:
             $ref: '#/definitions/Error'
 
-  /people/{idPerson}/patients/{idpatient}:
+  /patients/{idpatient}:
     x-swagger-router-controller: patients.controller
     parameters:
       - name: idpatient
         in: path
         description: "ID of the patient"
-        required: true
-        type: string
-      - name: idPerson
-        in: path
-        description: "ID of the Person"
         required: true
         type: string
     get:
@@ -377,6 +366,12 @@ paths:
       operationId: patientsControllerPutId
       summary: "Update a patient"
       description: "Update only one patient"
+      parameters:
+        - name: poll
+          in: body
+          required: true
+          schema:
+            $ref: '#/definitions/Patient'
       responses:
         200:
           description: "Success"
@@ -625,6 +620,7 @@ paths:
           description: "Access Denied"
           schema:
             $ref: "#/definitions/Error"
+  
   /test:
     x-swagger-router-controller: test.controller
     get:
